language/move-lang/tests/move_check/parser/struct_type_misspelled_copy_constraint.move
module M {
    // Check misspelling of "copy" constraint.
    struct S<T: copyable> { }
}
